[metadata]
name = lgbn
version = 0.1.0
description = Structure and parameter learning for linear Gaussian Bayesian networks.
long_description = file: README.md
author = Elias Hernandis
author_email = elias@hernandis.me
license = MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    scipy >= 1.8
    networkx >= 2.8
    pandas >= 1.4
    scikit-learn >= 1.1
